Fix nav column space on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,8 @@ main nav {
 
 main nav a {
   margin-top: 20px;
-  padding: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   border-radius: 5px;
   font-weight: 600;
   background-color: var(--color-primary-light);
